--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -67,3 +67,13 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.success {
+  color: green;
+  background: lightgrey;
+  font-size: 20px;
+  border: green solid 2px;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
